# medmanager

./: .env.example  .gitignore  LICENSE  Makefile  README.md  manage.py  pyproject.toml  pytest.ini  setup.cfg
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py
medmanager/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_appointments.py  test_health_professionals.py
